--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.80", features = ["backtrace"] }
 clap = { version = "4.5.1", features = ["derive"] }
+crossterm = "0.27.0"
 duration-str = "0.7.1"
 env_logger = "0.11.2"
 log = "0.4.20"
+minifb = "0.23.0"
+spectrum-analyzer = "1.5.0"
 wav = "1.0.0"
 windows = { version = "0.53.0", features = [
     "Win32_Media_Audio",
@@ -16,3 +19,4 @@ windows = { version = "0.53.0", features = [
     "Win32_UI_Shell_PropertiesSystem",
     "Win32_Devices_FunctionDiscovery",
 ] }
+plotters = "0.3.5"
