--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ windows = { version = "0.53.0", features = [
     "Win32_Devices_FunctionDiscovery",
 ] }
 plotters = "0.3.5"
+cpal = "0.15.2"
+audio-visualizer = "0.4.0"
